<?xml version="1.0"?>
<package format="2">
  <name>ros_mediapipe</name>
  <version>0.0.1</version>
  <description>ROS integration of Google Mediapipe </description>

  <!-- The maintainer tag -->
  <maintainer email="christopher.wong2@usherbrooke.ca">Christopher Yee WONG</maintainer>
  <author email="chrisyeewong@gmail.com">Christopher Yee WONG</author>

  <!-- The license tag -->
  <!-- Commonly used license strings: BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>OpenCv</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>OpenCv</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
